--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
+    <meta name="description" content="Horiseon"/>
 </head>
 
 <body>
@@ -28,21 +30,21 @@
     <section class="hero"></section>
 
     <main class="content">
-        <article id="search-engine-optimization">
+        <article id="search-engine-optimization" class="content-post">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization photo"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-        <article id="online-reputation-management">
+        <article id="online-reputation-management" class="content-post">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-        <article id="social-media-marketing">
+        <article id="social-media-marketing" class="content-post">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Marketing photo"/>
             <h2>Social Media Marketing</h2>
             <p>
@@ -52,21 +54,21 @@
     </main>
 
     <aside class="benefits">
-        <article class="benefit-lead">
+        <article id="benefit-lead" class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Benefit Lead"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
-        <article class="benefit-brand">
+        <article id="benefit-brand" class="benefit">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Benefit Brand"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
-        <article class="benefit-cost">
+        <article id="benefit-cost" class="benefit">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Benefit Cost">
             <p>
